# near-messenger-client

./: Cargo.toml  README.md
src/: aes.rs  command.rs  db.rs  encrypted_msg.rs  listener.rs  main.rs
